Compiler/tests/good/for1.nx
foreach i in [0 .. 10]
{
    printn(i);
    
    i := 11;
}