Compiler/tests/bad/for3.nx
type t = [0 .. 10];

for(x ; x < 20 ; x + 2)
{   
    print(i);
}
